Fix Cards gap

--- a/src/app/[locale]/components/cards/index.scss
+++ b/src/app/[locale]/components/cards/index.scss
@@ -1,7 +1,8 @@
 @import "../../../utilities/variables.scss";
 .cards-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 23px;
     width: 100%;
 }
 
